--- a/config/template.tex
+++ b/config/template.tex
@@ -31,7 +31,7 @@ $endif$
 \usepackage{xunicode}
 % Convert LaTeX specials (quotes, dashes etc.) to Unicode
 \defaultfontfeatures{Mapping=tex-text}
-\setmainfont [Ligatures={Common}, Numbers={OldStyle}]{$mainfont$}
+\setmainfont [Ligatures={Common}, Numbers={OldStyle}, ItalicFont={Junicode-Italic}]{$mainfont$}
 % Use mainfont for links
 \usepackage{url}
 \urlstyle{same}
