--- a/config/template.tex
+++ b/config/template.tex
@@ -19,17 +19,9 @@
 % Suppress page numbers
 % \pagenumbering{gobble}
 
-% LANGUAGE
-%--------------------------------
-% Set the main language
-$if(lang)$
-\usepackage{polyglossia}
-\setmainlanguage{$lang$}
-$endif$
-
 % TYPOGRAPHY
 %--------------------------------
-\usepackage{xunicode}
+\usepackage[no-math]{fontspec}
 % Convert LaTeX specials (quotes, dashes etc.) to Unicode
 \defaultfontfeatures{Mapping=tex-text}
 \setmainfont [Ligatures={Common}, Numbers={OldStyle}, ItalicFont={Junicode-Italic}]{$mainfont$}
