update tex template: fix spacing of appointments

--- a/config/template.tex
+++ b/config/template.tex
@@ -117,8 +117,9 @@ $if(appointments)$
         \note{$it.dates.begin.year$--present}\ignorespaces
 	$endif$
       $endif$
-      \emph{$it.title$}\\[.2cm]
+      \emph{$it.title$}\\
     $endfor$
+  [.2cm]
   $endfor$
 $endif$
 
